<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navUsers"
            android:icon="@drawable/ic_users"
            android:title="@string/users" />
        <item
            android:id="@+id/navCharges"
            android:icon="@drawable/ic_money"
            android:title="@string/charges" />
        <item
            android:id="@+id/navBtcCharges"
            android:icon="@drawable/ic_bitcoin"
            android:title="@string/btcCharges" />

        <item
            android:id="@+id/navSale"
            android:icon="@drawable/ic_sale"
            android:title="@string/sales" />
        <item
            android:id="@+id/navPurchase"
            android:icon="@drawable/ic_purchase"
            android:title="@string/purchases" />
        <item
            android:id="@+id/navNotices"
            android:icon="@drawable/ic_newspaper"
            android:title="@string/notices" />

    </group>

    <item android:title="@string/config">
        <menu>
            <item
                android:id="@+id/navSettings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/navProfile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile" />
            <item
                android:id="@+id/navChargePoints"
                android:icon="@drawable/ic_bank"
                android:title="@string/charge_points" />
            <item
                android:id="@+id/navLogout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
