<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/bankNameTextView"
        style="@style/BaseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bankNumberTextView"
        style="@style/BaseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank_number_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bankNameTextView"
        />

    <TextView
        android:id="@+id/bankOwnerNameTextView"
        style="@style/BaseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank_owner_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bankNumberTextView"
        />

    <TextView
        android:id="@+id/bankOwnerIdentificationTextView"
        style="@style/BaseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank_owner_identification_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bankOwnerNameTextView"
        />

    <TextView
        android:id="@+id/bankOwnerDocumentTypeTextView"
        style="@style/BaseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank_owner_document_type_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bankOwnerIdentificationTextView"
        />


</android.support.constraint.ConstraintLayout>