<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/purchaseDateTextView"
        style="@style/BaseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/purchaseValueTextView"
        style="@style/BaseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchaseDateTextView"
        />

    <TextView
        android:id="@+id/purchaseBtcTextView"
        style="@style/BaseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btc_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchaseValueTextView"
        />

    <TextView
        android:id="@+id/purchaseStateTextView"
        style="@style/BaseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchaseBtcTextView"
        />

    <TextView
        android:id="@+id/purchaseWalletUrlTextView"
        style="@style/BaseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallet_url_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchaseStateTextView"
        />

    <TextView
        android:id="@+id/purchaseEvidenceTextView"
        style="@style/BaseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evidence_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchaseWalletUrlTextView"
        />

    <ImageView
        android:id="@+id/purchaseEvidenceImageView"
        android:src="@drawable/imagen_disponible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchaseEvidenceTextView"
        tools:ignore="ContentDescription" />

</android.support.constraint.ConstraintLayout>