<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/saleDateTextView"
        style="@style/BaseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/saleValueTextView"
        style="@style/BaseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saleDateTextView"
        />

    <TextView
        android:id="@+id/saleBtcTextView"
        style="@style/BaseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btc_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saleValueTextView"
        />

    <TextView
        android:id="@+id/saleStateTextView"
        style="@style/BaseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saleBtcTextView"
        />

    <TextView
        android:id="@+id/saleEvidenceTextView"
        style="@style/BaseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evidence_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saleStateTextView"
        />

    <ImageView
        android:id="@+id/saleEvidenceImageView"
        android:src="@drawable/imagen_disponible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saleEvidenceTextView"
        tools:ignore="ContentDescription" />

</android.support.constraint.ConstraintLayout>