<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCardBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/noticeTitleTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/noticeTitleEditText"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_title"
                android:inputType="text"
                android:nextFocusDown="@id/noticeBodyTextInputLayout" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/noticeBodyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noticeTitleTextInputLayout">

            <EditText
                android:id="@+id/noticeBodyEditText"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_body"
                android:lines="10"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/noticeImageView"
            android:src="@drawable/imagen_disponible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noticeBodyTextInputLayout"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/selectNoticeImageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/PrimaryButton"
            android:text="@string/select_image"
            android:padding="20dp"
            android:drawableStart="@drawable/ic_camera"
            app:layout_constraintTop_toBottomOf="@id/noticeImageView"
            />

        <Button
            android:id="@+id/saveNoticeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/PrimaryButton"
            android:text="@string/save"
            android:padding="20dp"
            android:drawableStart="@drawable/ic_save"
            app:layout_constraintTop_toBottomOf="@id/selectNoticeImageButton"
            />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
